[gd_scene load_steps=12 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://sounds/artic drone.wav" type="Sample" id=2]
[ext_resource path="res://sounds/boom.wav" type="Sample" id=3]
[ext_resource path="res://sounds/engine.wav" type="Sample" id=4]
[ext_resource path="res://font/SF Atarian System.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://stop.png" type="Texture" id=6]

[sub_resource type="SampleLibrary" id=1]

"samples/artic drone" = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}
samples/boom = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}
samples/engine = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[sub_resource type="DynamicFont" id=2]

font/size = 96
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="main" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
script/script = ExtResource( 1 )

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="ThrustTween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 1017.0
margin/bottom = 593.0

[node name="Label" type="Label" parent="Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 361.0
margin/top = 41.0
margin/right = 615.0
margin/bottom = 137.0
custom_fonts/font = SubResource( 2 )
text = "SOUNDS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ThrustButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 409.0
margin/top = 201.0
margin/right = 521.0
margin/bottom = 233.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Thrust"
flat = false

[node name="BlackHoleButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 409.0
margin/top = 297.0
margin/right = 521.0
margin/bottom = 327.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Black Hole"
flat = false

[node name="FireButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 409.0
margin/top = 249.0
margin/right = 521.0
margin/bottom = 279.0
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Fire"
flat = false

[node name="StopThrustButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 537.0
margin/top = 201.0
margin/right = 581.0
margin/bottom = 239.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[node name="StopBlackHoleButton" type="Button" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 537.0
margin/top = 297.0
margin/right = 581.0
margin/bottom = 335.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 6 )
flat = false

[connection signal="tween_complete" from="ThrustTween" to="." method="_onThrustTweenComplete"]

[connection signal="pressed" from="Panel/ThrustButton" to="." method="_onThrust"]

[connection signal="pressed" from="Panel/BlackHoleButton" to="." method="_onBlackHole"]

[connection signal="pressed" from="Panel/StopThrustButton" to="." method="_onStopThrust"]

[connection signal="pressed" from="Panel/StopBlackHoleButton" to="." method="_onStopBlackHole"]


